--- a/src/app/components/customers/customers.component.html
+++ b/src/app/components/customers/customers.component.html
@@ -9,10 +9,8 @@
               <h4 class="font-fjalla">
                 {{ customer.title }}
               </h4>
-              <p class="time-ago">{{ calcTimeAgo(customer.date) }}</p>
-              <p>
-                {{ customer.text }}
-              </p>
+              <p class="time-ago">{{ customer.date | timeAgo }}</p>
+              <p>{{ customer.text }}</p>
             </div>
             <div class="slide__image">
               <img [src]="customer.image" />
