[ADD] Server Side Rendering

--- a/src/app/home/components/hero/hero.component.html
+++ b/src/app/home/components/hero/hero.component.html
@@ -12,7 +12,10 @@
       </a>
     </div>
     <div class="flex_child--horizontal fadeInUp">
-      <app-img src="assets/images/hero-phone.png"></app-img>
+      <app-img
+        src="assets/images/hero-phone.png"
+        alt="hero phone"
+      ></app-img>
     </div>
   </div>
 </section>
