--- a/src/app/home/components/customers/customers.component.html
+++ b/src/app/home/components/customers/customers.component.html
@@ -13,16 +13,19 @@
               <p>{{ customer.text }}</p>
             </div>
             <div class="slide__image">
-              <app-img [src]="customer.image"></app-img>
+              <app-img
+                [src]="customer.image"
+                [alt]="'customer ' + customer.id"
+              ></app-img>
             </div>
           </div>
         </ng-template>
       </swiper>
       <div class="slide-controls">
-        <button (click)="slidePrev()">
+        <button aria-label="left" (click)="slidePrev()">
           <fa-icon [icon]="faAngleLeft"></fa-icon>
         </button>
-        <button (click)="slideNext()">
+        <button aria-label="right" (click)="slideNext()">
           <fa-icon [icon]="faAngleRight"></fa-icon>
         </button>
       </div>
