--- a/src/app/home/components/features/features.component.html
+++ b/src/app/home/components/features/features.component.html
@@ -14,6 +14,7 @@
           type="image/svg+xml"
           data="assets/images/features-circle.svg"
           class="svg"
+          title="circle"
         ></object>
         <p>
           Performance issues such as throughput and end-to-end delay are
@@ -25,6 +26,7 @@
           type="image/svg+xml"
           data="assets/images/features-polygon.svg"
           class="svg"
+          title="polygon"
         ></object>
         <p>
           Many systems can be characterized as dominated either by
@@ -37,6 +39,7 @@
           type="image/svg+xml"
           data="assets/images/features-rec.svg"
           class="svg"
+          title="rectangle"
         ></object>
         <p>
           In some cases, hard limits such as the speed of light present
@@ -48,6 +51,7 @@
     <app-img
       class="features__image"
       src="assets/images/features-image.png"
+      alt="features"
     ></app-img>
     <div class="features__right aligner flex--vertical">
       <div
@@ -57,6 +61,7 @@
           type="image/svg+xml"
           data="assets/images/features-star.svg"
           class="svg"
+          title="star"
         ></object>
         <p>
           Other systems allow for significant balancing and optimization for
@@ -70,6 +75,7 @@
           type="image/svg+xml"
           data="assets/images/features-triangle.svg"
           class="svg"
+          title="triangle"
         ></object>
         <p>
           A telecom satellite in geosynchronous orbit imposes a path length
@@ -83,6 +89,7 @@
           type="image/svg+xml"
           data="assets/images/features-rec.svg"
           class="svg"
+          title="rectangle"
         ></object>
         <p>
           This delay can be very noticeable and affects satellite phone
