--- a/src/app/home/components/integrations/integrations.component.html
+++ b/src/app/home/components/integrations/integrations.component.html
@@ -3,11 +3,11 @@
     <h3 class="font-fjalla">Trusted by</h3>
   </div>
   <div class="flex--horizontal">
-    <img src="assets/images/logos/1.svg" class="logo" />
-    <img src="assets/images/logos/2.svg" class="logo" />
-    <img src="assets/images/logos/3.svg" class="logo" />
-    <img src="assets/images/logos/4.svg" class="logo" />
-    <img src="assets/images/logos/5.svg" class="logo" />
-    <img src="assets/images/logos/6.svg" class="logo" />
+    <img src="assets/images/logos/1.svg" class="logo" alt="airbnb" />
+    <img src="assets/images/logos/2.svg" class="logo" alt="twitter" />
+    <img src="assets/images/logos/3.svg" class="logo" alt="eventbrite" />
+    <img src="assets/images/logos/4.svg" class="logo" alt="netflix" />
+    <img src="assets/images/logos/5.svg" class="logo" alt="google" />
+    <img src="assets/images/logos/6.svg" class="logo" alt="spotify" />
   </div>
 </section>
