--- a/src/app/home/components/stats/stats.component.html
+++ b/src/app/home/components/stats/stats.component.html
@@ -8,11 +8,12 @@
   </div>
   <div class="stats__block">
     <div class="flex--horizontal">
-      <h5 class="stats__name">A/B Split</h5>
-      <h4 class="font-fjalla stats__result">A/B</h4>
+      <h4 class="stats__name">A/B Split</h4>
+      <h5 class="font-fjalla stats__result">A/B</h5>
     </div>
     <div class="stats">
       <canvas
+        *ngIf="isBrowser"
         baseChart
         [type]="'line'"
         [data]="dataSet1"
@@ -25,11 +26,12 @@
   </div>
   <div class="stats__block">
     <div class="flex--horizontal">
-      <h5 class="stats__name">Crash Rate</h5>
-      <h4 class="font-fjalla stats__result">89%</h4>
+      <h4 class="stats__name">Crash Rate</h4>
+      <h5 class="font-fjalla stats__result">89%</h5>
     </div>
     <div class="stats">
       <canvas
+        *ngIf="isBrowser"
         baseChart
         [type]="'bar'"
         [data]="dataSet2"
@@ -42,11 +44,12 @@
   </div>
   <div class="stats__block">
     <div class="flex--horizontal">
-      <h5 class="stats__name">Error reporting API - Uptime</h5>
-      <h4 class="font-fjalla stats__result">100</h4>
+      <h4 class="stats__name">Error reporting API - Uptime</h4>
+      <h5 class="font-fjalla stats__result">100</h5>
     </div>
     <div class="stats">
       <canvas
+        *ngIf="isBrowser"
         baseChart
         [type]="'line'"
         [data]="dataSet3"
@@ -59,11 +62,12 @@
   </div>
   <div class="stats__block">
     <div class="flex--horizontal">
-      <h5 class="stats__name">General API</h5>
-      <h4 class="font-fjalla stats__result">81rps</h4>
+      <h4 class="stats__name">General API</h4>
+      <h5 class="font-fjalla stats__result">81rps</h5>
     </div>
     <div class="stats">
       <canvas
+        *ngIf="isBrowser"
         baseChart
         [type]="'line'"
         [data]="dataSet4"
@@ -76,11 +80,12 @@
   </div>
   <div class="stats__block">
     <div class="flex--horizontal">
-      <h5 class="stats__name">Data Access API</h5>
-      <h4 class="font-fjalla stats__result">93%</h4>
+      <h4 class="stats__name">Data Access API</h4>
+      <h5 class="font-fjalla stats__result">93%</h5>
     </div>
     <div class="stats">
       <canvas
+        *ngIf="isBrowser"
         baseChart
         [type]="'bar'"
         [data]="dataSet5"
@@ -93,11 +98,12 @@
   </div>
   <div class="stats__block">
     <div class="flex--horizontal">
-      <h5 class="stats__name">Average Latency</h5>
-      <h4 class="font-fjalla stats__result">1.98ms</h4>
+      <h4 class="stats__name">Average Latency</h4>
+      <h5 class="font-fjalla stats__result">1.98ms</h5>
     </div>
     <div class="stats">
       <canvas
+        *ngIf="isBrowser"
         baseChart
         [type]="'line'"
         [data]="dataSet6"
