--- a/src/app/home/components/summary/summary.component.html
+++ b/src/app/home/components/summary/summary.component.html
@@ -2,15 +2,24 @@
   <div class="flex--vertical">
     <div class="flex_child--vertical flex--horizontal summary__lists">
       <div class="summary__list flex--horizontal fadeIn">
-        <app-img src="assets/images/summary-github.png"></app-img>
+        <app-img
+          src="assets/images/summary-github.png"
+          alt="summary github"
+        ></app-img>
         <p>works on phone and all devices</p>
       </div>
       <div class="summary__list flex--horizontal fadeIn">
-        <app-img src="assets/images/summary-cpu.png"></app-img>
+        <app-img
+          src="assets/images/summary-cpu.png"
+          alt="summary cpu"
+        ></app-img>
         <p>free status page for monitoring</p>
       </div>
       <div class="summary__list flex--horizontal fadeIn">
-        <app-img src="assets/images/summary-dollar.png"></app-img>
+        <app-img
+          src="assets/images/summary-dollar.png"
+          alt="summary dollar"
+        ></app-img>
         <p>easy integrations and setup</p>
       </div>
     </div>
