[ADD] Animaciones para la navegación

--- a/src/app/home/components/features/features.component.scss
+++ b/src/app/home/components/features/features.component.scss
@@ -7,7 +7,7 @@
       animation-delay: $i * 500ms;
     }
   }
-  // opacity: 0;
+  opacity: 0;
   > .flex--horizontal {
     justify-content: center;
   }
