--- a/src/app/home/components/navbar/navbar.component.scss
+++ b/src/app/home/components/navbar/navbar.component.scss
@@ -48,6 +48,17 @@ nav {
 .nav--mobile {
   display: none;
 }
+
+.nav--desktop {
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  background-color: #27263ff2;
+  transition: 0.3s;
+}
+
 .nav--icon {
   border-radius: 100px;
   padding: 0.5rem;
