--- a/src/app/home/components/snippets/snippets.component.scss
+++ b/src/app/home/components/snippets/snippets.component.scss
@@ -1,7 +1,7 @@
 @import "vars";
 
 .section--snippets {
-  // opacity: 0;
+  opacity: 0;
   max-width: 760px;
   margin: 4rem auto 8rem auto;
   padding-top: 14rem;
