--- a/src/app/home/components/stats/stats.component.scss
+++ b/src/app/home/components/stats/stats.component.scss
@@ -1,7 +1,7 @@
 @import "vars";
 
 .section--stats {
-  // opacity: 0;
+  opacity: 0;
   margin: 8rem auto;
   .stats__block {
     border: 1px solid $purple-5;
