--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -4,6 +4,11 @@ body {
   padding: 0;
   font-size: 18px; //1em
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   min-height: 100%;
   font-family: "Open Sans", sans-serif;
